JS function: showAtDisplay

--- a/index.html
+++ b/index.html
@@ -17,42 +17,41 @@
 
             <div class="container-numbers">
                 <div class="btn-numbers-conjunt">
-                    <button onclick="" class="btn-number btn-style" value="1">1</button>
-                    <button onclick="" class="btn-number btn-style" value="2">2</button>
-                    <button onclick="" class="btn-number btn-style" value="3">3</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="1">1</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="2">2</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="3">3</button>
                 </div>
                 <div class="btn-numbers-conjunt">
-                    <button onclick="" class="btn-number btn-style" value="4">4</button>
-                    <button onclick="" class="btn-number btn-style" value="5">5</button>
-                    <button onclick="" class="btn-number btn-style" value="6">6</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="4">4</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="5">5</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="6">6</button>
                 </div>
                 <div class="btn-numbers-conjunt">
-                    <button onclick="" class="btn-number btn-style" value="7">7</button>
-                    <button onclick="" class="btn-number btn-style" value="8">8</button>
-                    <button onclick="" class="btn-number btn-style" value="9">9</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="7">7</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="8">8</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="9">9</button>
                 </div>
                 <div class="btn-numbers-conjunt btn-numbers-conjunt-exclused">
-                    <button onclick="" class="btn-number btn-style" value="0" style="width: 100%;">0</button>
+                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="0" style="width: 100%;">0</button>
                 </div>
             </div>
 
             <div class="container-btn-ops">
                 <div class="btn-op-conjunt" style="flex-basis: 45%;">
-                    <button onclick="" class="btn-op btn-style" value="+">+</button>
-                    <button onclick="" class="btn-op btn-style" value="-">-</button>
-                    <button onclick="" class="btn-op btn-style" value="*">*</button>
-                    <button onclick="" class="btn-op btn-style" value="/">/</button>
+                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="+">+</button>
+                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="-">-</button>
+                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="*">*</button>
+                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt" style="flex-basis: 45%;">
-                    <button onclick="" class="btn-op btn-style" style="background-color: #ed6507;">=</button>
+                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="=" style="background-color: #ed6507;">=</button>
                 </div>
             </div>
 
         </div>
-
     </div>
 
-    <script type="javascript/text" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
