--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,44 +8,47 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
+
 <body>
     <div class="wrapper">
 
         <div class="container-calculator">
 
-            <div class="display"></div>
+            <ul class="display"></ul>
             <div class="clearfix" style="margin-top: 3px;"></div>
 
             <div class="container-numbers">
                 <div class="btn-numbers-conjunt">
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="1">1</button>
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="2">2</button>
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="3">3</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="1">1</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="2">2</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="3">3</button>
                 </div>
                 <div class="btn-numbers-conjunt">
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="4">4</button>
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="5">5</button>
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="6">6</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="4">4</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="5">5</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="6">6</button>
                 </div>
                 <div class="btn-numbers-conjunt">
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="7">7</button>
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="8">8</button>
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="9">9</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="7">7</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="8">8</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="9">9</button>
                 </div>
                 <div class="btn-numbers-conjunt btn-numbers-conjunt-exclused">
-                    <button onclick="showAtDisplay(this)" class="btn-number btn-style" value="0" style="width: 100%;">0</button>
+                    <button onclick="showNumber(this)" class="btn-number btn-style" value="0"
+                        style="width: 100%;">0</button>
                 </div>
             </div>
 
             <div class="container-btn-ops">
-                <div class="btn-op-conjunt" style="flex-basis: 45%;">
-                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="+">+</button>
-                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="-">-</button>
-                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="*">*</button>
-                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="/">/</button>
+                <div class="btn-op-conjunt">
+                    <button onclick="showOp(this)" class="btn-op btn-style" value="+">+</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" value="-">-</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" value="*">*</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" value="/">/</button>
                 </div>
-                <div class="btn-op-conjunt" style="flex-basis: 45%;">
-                    <button onclick="showAtDisplay(this)" class="btn-op btn-style" value="=" style="background-color: #ed6507;">=</button>
+                <div class="btn-op-conjunt">
+                    <button onclick="showOp(this)" class="btn-op btn-style" value="="
+                        style="background-color: #ed6507;">=</button>
                 </div>
             </div>
 
@@ -54,4 +58,5 @@
     <script src="js/main.js"></script>
 
 </body>
+
 </html>
