--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                     <button onclick="showNumber(this)" class="btn-number btn-style" value="8">8</button>
                     <button onclick="showNumber(this)" class="btn-number btn-style" value="9">9</button>
                 </div>
-                <div class="btn-numbers-conjunt btn-numbers-conjunt-exclused">
+                <div class="btn-numbers-conjunt" style="justify-content: center;">
                     <button onclick="showNumber(this)" class="btn-number btn-style" value="0"
                         style="width: 100%;">0</button>
                 </div>
             </div>
 
-            <div class="container-btn-ops">
+            <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="showOp(this)" class="btn-op btn-style" value="+">+</button>
-                    <button onclick="showOp(this)" class="btn-op btn-style" value="-">-</button>
-                    <button onclick="showOp(this)" class="btn-op btn-style" value="*">*</button>
-                    <button onclick="showOp(this)" class="btn-op btn-style" value="/">/</button>
+                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="+">+</button>
+                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="-">-</button>
+                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="*">*</button>
+                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
                     <button onclick="showOp(this)" class="btn-op btn-style" value="="
