--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 
             <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="+">+</button>
-                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="-">-</button>
-                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="x">x</button>
-                    <button onclick="showOp(this);transformNumber()" class="btn-op btn-style" value="/">/</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="+">+</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="-">-</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="x">x</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
                     <button onclick="cleanDisplay()" class="btn-op btn-style btn-action-style" value="C"
                         style="background-color: #5007ed;">C</button>
-                    <button onclick="showOp(this);transformNumber();doOperation(this)"
+                    <button onclick="transformNumber();doOperation(this)"
                         class="btn-op btn-style btn-action-style" value="="
                         style="background-color: #e63819;">=</button>
                 </div>
