calculator 2.5v: operations between float numbers

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="8">8</button>
                     <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="9">9</button>
                 </div>
-                <div class="btn-numbers-conjunt" style="justify-content: center;">
-                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="0"
-                        style="width: 100%;">0</button>
+                <div class="btn-numbers-conjunt">
+                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="0" style="width: 65%;">0</button>
+                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="." style="width: 30%;">.</button>
                 </div>
             </div>
 
