--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
             <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="+">+</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="-">-</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="x">x</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" value="/">/</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="sum" value="+">+</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="subtraction" value="-">-</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="multiplication" value="x">x</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="division" value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
                     <button onclick="cleanDisplay()" class="btn-op btn-style btn-action-style" value="C"
