--- a/index.html
+++ b/index.html
@@ -34,24 +34,31 @@
                     <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="9">9</button>
                 </div>
                 <div class="btn-numbers-conjunt">
-                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="0" style="width: 65%;">0</button>
-                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="." style="width: 30%;">.</button>
+                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="0"
+                        style="width: 65%;">0</button>
+                    <button onclick="checkDisplay();showNumber(this)" class="btn-number btn-style" value="."
+                        style="width: 30%;">.</button>
                 </div>
             </div>
 
             <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="sum" value="+">+</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="subtraction" value="-">-</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="multiplication" value="x">x</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="division" value="/">/</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="sum"
+                        value="+">+</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="subtraction"
+                        value="-">-</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="multiplication"
+                        value="x">x</button>
+                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="division"
+                        value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
-                    <button onclick="cleanDisplay()" class="btn-op btn-style btn-action-style" value="C"
-                        style="background-color: #5007ed;">C</button>
-                    <button onclick="transformNumber();doOperation(this)"
-                        class="btn-op btn-style btn-action-style" value="="
-                        style="background-color: #e63819;">=</button>
+                    <button onclick="" class="btn-op btn-style btn-action" value="CE"
+                        style="background-color: #5007ed; flex-basis: 20%;">CE</button>
+                    <button onclick="cleanDisplay()" class="btn-op btn-style btn-action" value="C"
+                        style="background-color: #5007ed; flex-basis: 20%;">C</button>
+                    <button onclick="transformNumber();doOperation(this)" class="btn-op btn-style btn-action" value="="
+                        style="background-color: #e63819; flex-basis: 45%;">=</button>
                 </div>
             </div>
 
