--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
-                    <button onclick="" class="btn-op btn-style btn-action" value="CE"
+                    <button onclick="cleanLastChild()" class="btn-op btn-style btn-action" value="CE"
                         style="background-color: #5007ed; flex-basis: 20%;">CE</button>
                     <button onclick="cleanDisplay()" class="btn-op btn-style btn-action" value="C"
                         style="background-color: #5007ed; flex-basis: 20%;">C</button>
