--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
             <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="sum"
+                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="sum"
                         value="+">+</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="subtraction"
+                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="subtraction"
                         value="-">-</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="multiplication"
+                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="multiplication"
                         value="x">x</button>
-                    <button onclick="transformNumber();showOp(this)" class="btn-op btn-style" id="division"
+                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="division"
                         value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
@@ -57,7 +57,7 @@
                         style="background-color: #5007ed; flex-basis: 20%;">CE</button>
                     <button onclick="cleanDisplay()" class="btn-op btn-style btn-action" value="C"
                         style="background-color: #5007ed; flex-basis: 20%;">C</button>
-                    <button onclick="transformNumber();doOperation(this)" class="btn-op btn-style btn-action" value="="
+                    <button onclick="transformNumber();removeAndAdd();doOperation(this)" class="btn-op btn-style btn-action" value="="
                         style="background-color: #e63819; flex-basis: 45%;">=</button>
                 </div>
             </div>
