--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="container-calculator">
 
-            <ul class="display"></ul>
+            <div class="display"></div>
             <div class="clearfix" style="margin-top: 3px;"></div>
 
             <div class="container-numbers">
