--- a/index.html
+++ b/index.html
@@ -43,21 +43,17 @@
 
             <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="sum"
-                        value="+">+</button>
-                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="subtraction"
-                        value="-">-</button>
-                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="multiplication"
-                        value="x">x</button>
-                    <button onclick="transformNumber();removeAndAdd();showOp(this)" class="btn-op btn-style" id="division"
-                        value="/">/</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" id="sum" value="+">+</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" id="subtraction" value="-">-</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" id="multiplication" value="x">x</button>
+                    <button onclick="showOp(this)" class="btn-op btn-style" id="division" value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
                     <button onclick="cleanLastChild()" class="btn-op btn-style btn-action" value="CE"
                         style="background-color: #5007ed; flex-basis: 20%;">CE</button>
                     <button onclick="cleanDisplay()" class="btn-op btn-style btn-action" value="C"
                         style="background-color: #5007ed; flex-basis: 20%;">C</button>
-                    <button onclick="transformNumber();removeAndAdd();doOperation(this)" class="btn-op btn-style btn-action" value="="
+                    <button onclick="checkDisplay();doOperation(this)" class="btn-op btn-style btn-action" value="="
                         style="background-color: #e63819; flex-basis: 45%;">=</button>
                 </div>
             </div>
