--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
             <div class="container-ops">
                 <div class="btn-op-conjunt">
-                    <button onclick="removeAndAdd();showOp(this)" class="btn-op btn-style" id="sum" value="+">+</button>
-                    <button onclick="removeAndAdd();showOp(this)" class="btn-op btn-style" id="subtraction" value="-">-</button>
-                    <button onclick="removeAndAdd();showOp(this)" class="btn-op btn-style" id="multiplication" value="x">x</button>
-                    <button onclick="removeAndAdd();showOp(this)" class="btn-op btn-style" id="division" value="/">/</button>
+                    <button onclick="checkDisplay();removeAndAdd();showOp(this)" class="btn-op btn-style" id="sum" value="+">+</button>
+                    <button onclick="checkDisplay();removeAndAdd();showOp(this)" class="btn-op btn-style" id="subtraction" value="-">-</button>
+                    <button onclick="checkDisplay();removeAndAdd();showOp(this)" class="btn-op btn-style" id="multiplication" value="x">x</button>
+                    <button onclick="checkDisplay();removeAndAdd();showOp(this)" class="btn-op btn-style" id="division" value="/">/</button>
                 </div>
                 <div class="btn-op-conjunt">
                     <button onclick="cleanLastChild()" class="btn-op btn-style btn-action" value="CE"
