feat: added function to set button eventListener

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="container-ops"></div>
       </div>
     </div>
+    <script src="js/onMounted.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
